Wed May  4 09:25:13 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/Objref_TypeCode_Factory.h:

	  Remove this file.  It is no longer needed.

	* tao/TypeCode_CDR_Extraction.cpp (tc_objref_factory):

	  De-templatized objref-like TypeCode extraction code.  Knocks off
	  5K from static footprint.

Wed May  4 09:21:56 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/TypeCode_CDR_Extraction.cpp:

Wed May  4 08:41:55 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/Alias_TypeCode_Static.inl:
	* tao/Enum_TypeCode_Static.inl:
	* tao/Objref_TypeCode_Static.inl:
	* tao/Sequence_TypeCode_Static.inl:
	* tao/String_TypeCode_Static.inl:
	* tao/Struct_TypeCode_Static.inl:
	* tao/Union_TypeCode_Static.inl:
	* tao/Value_TypeCode_Static.inl:

	  Work around MSVC++ 6 broken namespace support by wrapping
	  TAO::Null_RefCount_Policy base class initialization with
	  the ACE_NESTED_CLASS macro.

Wed May  4 12:57:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * utils/NamingViewer/res/NamingViewer.ico:
          Use an icon with a transparent backgroup. Thanks to
          Frank Pilhofer <fp at mc dot com> for creating this. Fixes bugzilla
          bug 2104

Wed May  4 12:29:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/TypeCodeFactory/TypeCodeFactory_i.cpp:
          Fixed compile problem with emulated exceptions

Wed May  4 11:12:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/ImplicitActivationPolicyA.cpp:
        * tao/PortableServer/PortableServerA.cpp:
        * tao/PortableServer/ThreadPolicyA.cpp:
        * tao/PortableServer/AdapterActivatorA.cpp:
        * tao/PortableServer/ForwardRequestA.cpp:
        * tao/PortableServer/RequestProcessingPolicyA.cpp:
        * tao/PortableServer/ServantLocatorA.cpp:
        * tao/PortableServer/ServantActivatorA.cpp:
        * tao/PortableServer/ServantManagerA.cpp:
        * tao/PortableServer/ServantRetentionPolicyA.cpp: