@@ -114,8 +114,9 @@ TAO::TypeCode::Union<char const *,
   ACE_CHECK_RETURN (0);
 
   CORBA::Boolean const equal_discriminators =
-    (*this->discriminant_type_)->equal (tc_discriminator.in ()
-                                        ACE_ENV_ARG_PARAMETER);
+    Traits<char const *>::get_typecode (this->discriminant_type_)->equal (
+      tc_discriminator.in ()
+      ACE_ENV_ARG_PARAMETER);
   ACE_CHECK_RETURN (0);
 
   if (!equal_discriminators)
@@ -168,8 +169,9 @@ TAO::TypeCode::Union<char const *,
   ACE_CHECK_RETURN (0);
 
   CORBA::Boolean const equiv_discriminators =
-    (*this->discriminant_type_)->equivalent (tc_discriminator.in ()
-                                             ACE_ENV_ARG_PARAMETER);
+    Traits<char const *>::get_typecode (this->discriminant_type_)->equivalent (
+      tc_discriminator.in ()
+      ACE_ENV_ARG_PARAMETER);
   ACE_CHECK_RETURN (0);
 
   if (!equiv_discriminators)
